# rust-scientific-framework

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/graph/src/: lib.rs
crates/numerical-solver/: Cargo.toml
crates/numerical-solver/src/: lib.rs
crates/omni-opt/: Cargo.toml
crates/omni-opt/src/: lib.rs
crates/stats/src/: lib.rs
omni-opt/: Cargo.toml  README.md
omni-opt/benches/: solver_bench.rs
omni-opt/src/: constraints.rs  gradient.rs  kaczmarz.rs  lib.rs  line_search.rs  linear.rs  methods.rs  oracle.rs  solver.rs  state.rs  traits.rs  workspace.rs
omni-opt/tests/: pathology.rs
